--- a/results/report.qmd
+++ b/results/report.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Biomarkers of ASD"
 subtitle: "If you want a subtitle put it here"
-author: "Lucas Childs,..."
+author: "Lucas Childs, Bahaar Ahuja, ..."
 date: last-modified
 published-title: "Updated"
 editor: visual
@@ -23,15 +23,17 @@ library(tidyverse)
 
 ## Abstract
 
-Write a brief one-paragraph abstract that describes the contents of your write-up.
+This report investigates blood biomarkers for autism spectrum disorder (ASD) with a focus on evaluating how methodological choices influence results. Using the dataset from Hewitson et al. (2021), we examine protein distributions and justify the use of log-transformations to stabilize variance and reduce skewness. We explore subject-level outliers and assess whether their frequency differs between ASD and typically developing (TD) groups. We then evaluate how modifications to protein selection procedures, such as varying the number of top predictive proteins, using training/test partitions, and applying fuzzy intersections, affect classification performance. Finally, we identify alternative protein panels that achieve comparable or improved classification accuracy and benchmark these results against the original in-class analysis. This work highlights the sensitivity of biomarker analyses to preprocessing and methodological decisions and provides guidance for more robust ASD protein panel selection.
 
-This report covers an analysis of blood biomarkers for autism spectrum disorder (ASD), analyzing proteins and their association with ASD. Emulating the paper Hewitson et al. 2021, we analyze the dataset used in the paper, data preprocessing including transformations and outlier trimmings, methodologies for selecting a panel of proteins for ASD classification, and improvement in protein panel selection.
+## Aim
+
+The aim of this report is to explore the sensitivity of ASD biomarker analyses to key methodological choices. Specifically, we examine the effects of log-transforming protein levels, assess the presence of subject-level outliers and their group distribution, and investigate how modifications to protein selection procedures (e.g., training/test splits, number of top proteins, fuzzy intersections) impact classification performance. Finally, we identify alternative protein panels that achieve comparable or improved classification accuracy and benchmark these results against the original in-class analysis.
 
 ## Dataset
 
-Write a brief data description, including: how data were obtained; sample characteristics; variables measured; and data preprocessing. This can be largely based on the source paper and should not exceed 1-2 paragraphs.
+The data consist of blood serum samples from 76 boys with autism spectrum disorder (ASD) and 78 typically developing (TD) boys, aged 18 months to 8 years. Proteomic analysis was performed using SomaLogic’s SOMAScan™ 1.3K platform, measuring levels of 1,317 proteins. Two additional variables, ADOS (ASD severity) and group (ASD vs. TD), were included.
 
-Data was taken via blood serum sample from 76 boys with ASD and 78 typically developing (TD) boys ranging from 18 months - 8 years of age. The serum samples were analyzed to identify possible eraly biological markers for ASD. Proteomic analysis of serum was performed using SomaLogic’s SOMAScan$^{TM}$ assay 1.3K platform. A total of 1,317 proteins were analyzed, with two additional variables `ADOS` and `group` pertaining to ASD severity and whether the subject is TD or has ASD. Data preprocessing was done to eliminate missing values, $log_{10}$ transform biomarker levels to stabilize variance, large values, and normalize skewed distributions, center and scale transformed data to standardize the distribution of each biomarker, and trim outliers to prevent disproportionate influence.
+Preprocessing involved removing missing values, applying a log₁₀ transformation to stabilize variance and reduce skewness, centering and scaling each protein to standardize distributions, and trimming extreme outliers to prevent disproportionate influence. For exploratory analyses, we also considered an untrimmed dataset to examine subject-level outliers.
 
 ## Summary of published analysis
 
